--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
               <button id="btn" type="button">[svn status]</button><br>
               <ul id="status">
               </ul>
+              <textarea id="message_textarea"></textarea>
               <div id="cmd">svn commit -m</div>
             </div>
           </div>
