Add clear button. Keep checking box when status is updated.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
           <div class="panel-content">
             <div id="file-explorer">
               <input type="text" id="cwd" value="">
-              <button id="btn" type="button">[svn status]</button><br>
+              <button id="update_status_button" type="button">[svn status]</button><br>
               <ul id="status">
               </ul>
+              <button id="clear_message_button" type="button">clear</button><br>
               <textarea id="message_textarea"></textarea>
               <div id="cmd">svn commit -m</div>
             </div>
