change status list to scrollable.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
             <div id="file-explorer">
               <input type="text" id="cwd" value="">
               <button id="update_status_button" type="button">[svn status]</button><br>
-              <ul id="status">
-              </ul>
+              <div id="status-box">
+                <ul id="status">
+                </ul>
+              </div>
               <button id="clear_message_button" type="button">clear</button><br>
               <textarea id="message_textarea"></textarea>
               <div id="cmd">svn commit -m</div>
